apply review comments
Signed-off-by: Hans Böhm <h.boehm@gmx.at>